--- a/index.html/index.html
+++ b/index.html/index.html
@@ -51,10 +51,10 @@
            </div>
           <ul class="bot-list">
             <li class="bot-listr">
-                <a href="#" class="list1">首页</a>
+                <a href="#">首页</a>
             </li>
             <li class="bot-listr">
-                <a href="#">全部商品</a>
+                <a href="#" class="list1">全部商品</a>
             </li>
             <li class="bot-listr">
                 <a href="#">热卖商品</a>
@@ -66,8 +66,51 @@
    <!-- E 头部搜索-->
 
    <!-- S 内容区域 -->
-    <div>
-
+    <div class="cont">
+      <div class="box">
+          <div class="ctop">
+              <a href="#">首页</a><span>&gt列表页</span>
+          </div>
+          <div class="cbott ">
+           <div class="contleft clearfix">
+               <div class="conletop col-1">
+                   <span class="iconfont icon-suoyoufenlei she1"></span>&nbsp&nbsp
+                   <span class="she2">所有分类</span>
+                </div>
+               <div class="conlebot ">
+                   <ul class="conlist ">
+                       <li><a href="#">手机通讯</a></li>
+                       <li><a href="#">全屏手机</a></li>
+                       <li><a href="#">食品生鲜</a></li>
+                       <li><a href="#">水果</a></li>
+                       <li><a href="#">汽车保养</a></li>
+                       <li><a href="#">蓄电池</a></li>
+                       <li><a href="#">内衣配饰</a></li>
+                       <li><a href="#">大牌文胸</a></li>
+                       <li><a href="#">母婴童装</a></li>
+                       <li><a href="#">奶粉</a></li>
+                       <li><a href="#">美妆护肤</a></li>
+                       <li><a href="#">防晒</a></li>
+                       <li><a href="#">酒水饮料</a></li>
+                       <li><a href="#">白酒</a></li>
+                       <li><a href="#">个护清洁</a></li>
+                       <li><a href="#">花露水</a></li>
+                       <li><a href="#">家用电器</a></li>
+                       <li><a href="#">电水壶</a></li>
+                       <li><a href="#">电饼档</a></li>
+                       <li><a href="#">电脑耗材</a></li>
+                       <li><a href="#">机械键盘</a></li>
+                       <li><a href="#">吃鸡装备</a></li>
+                   </ul>
+               </div>
+           </div>
+           <div class="contright col-4">
+               <div class="conritop"></div>
+               <div class="conricen"></div>
+               <div class="conribot"></div>
+           </div>
+          </div>
+      </div>
     </div>
    <!-- E 内容区域 --> 
 
