--- a/mall/mall-test2/index.html/index.html
+++ b/mall/mall-test2/index.html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>商城-全部商品</title>
+    <title>商城-热卖商品</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/iconfont.css">
     <link rel="stylesheet" href="../css/iconfont2.css">
@@ -51,13 +51,13 @@
            </div>
           <ul class="bot-list">
             <li class="bot-listr">
-                <a href="#">首页</a>
+                <a href="../../Mall-project/index.html/index.html">首页</a>
             </li>
             <li class="bot-listr">
-                <a href="#" class="list1">全部商品</a>
+                <a href="../../mall-test2/index.html/index.html">全部商品</a>
             </li>
             <li class="bot-listr">
-                <a href="#">热卖商品</a>
+                <a href="#" class="list1">热卖商品</a>
             </li>
           </ul>
         </div>
@@ -69,11 +69,11 @@
     <div class="cont">
       <div class="box">
           <div class="ctop">
-              <a href="#">首页</a><span>&gt列表页</span>
+              <a href="#">首页</a><span class="iconfont icon-dayuhao-copy">列表页</span>
           </div>
           <div class="cbott ">
-           <div class="contleft clearfix">
-               <div class="conletop col-1">
+           <div class="contleft col-1 clearfix">
+               <div class="conletop">
                    <span class="iconfont icon-suoyoufenlei she1"></span>&nbsp&nbsp
                    <span class="she2">所有分类</span>
                 </div>
@@ -105,10 +105,47 @@
                </div>
            </div>
            <div class="contright col-4">
-               <div class="conritop"></div>
-               <div class="conricen"></div>
-               <div class="conribot"></div>
-           </div>
+               <div class="conritop clearfix">
+                   <div class="conritople"><a href="#">默认排序</a></div>
+                   <div class="conritopri"><a href="#" class="iconfont icon-shangxia">按价格</a></div>
+               </div>
+               <div class="conricen clearfix">
+                  <ul class="bes-ri clearfix">
+                    <li class="bes-ri1 col-1 jianju">
+                        <img src="../images/a1.jpg" alt="">
+                        <p class="bes-ri1name">宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="bes-ri1money">&yen;9999</span>
+                        <span class="bes-ri1number">0人已购买</span>
+                    </li>
+                    <li class="bes-ri1 col-1 jianju">
+                        <img src="../images/a2.jpg" alt="">
+                        <p class="bes-ri1name">宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="bes-ri1money">&yen;9999</span>
+                        <span class="bes-ri1number">0人已购买</span>
+                    </li>
+                    <li class="bes-ri1 col-1 jianju">
+                        <img src="../images/a2.jpg" alt="">
+                        <p class="bes-ri1name">宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="bes-ri1money">&yen;9999</span>
+                        <span class="bes-ri1number">0人已购买</span>
+                    </li>
+                    <li class="bes-ri1 col-1 jianju">
+                        <img src="../images/a2.jpg" alt="">
+                        <p class="bes-ri1name">宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="bes-ri1money">&yen;9999</span>
+                        <span class="bes-ri1number">0人已购买</span>
+                    </li>
+                  </ul>
+                  <ul class="bes-ri clearfix">
+                        <li class="bes-ri1 col-1 jianju">
+                            <img src="../images/a1.jpg" alt="">
+                            <p class="bes-ri1name">宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                            <span class="bes-ri1money">&yen;9999</span>
+                            <span class="bes-ri1number">0人已购买</span>
+                        </li>
+                  </ul>
+               </div>
+            </div>
           </div>
       </div>
     </div>
